tests/paczka1/fuzzy1/44589569.err
Error in line 2: Y3AkUS8D A991 49,9
Error in line 3: A442 A991 58,6
Error in line 4: Y3AkUS8D S45 71,1
Error in line 12: chebF7SYfV A442 80,1
Error in line 16: Y3AkUS8D A991 22,0
Error in line 19: dNy A442 35,6
Error in line 15: vhGr S45 31,3
Error in line 29: Y3AkUS8D A442 97,48
Error in line 25: dNy A442 24,0
Error in line 27: Y3AkUS8D S45 57,3
Error in line 22: 7lG S45 64,2
Error in line 38: A442 A442 88,9
